--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/fr_FR/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/fr_FR/openmediavault-ldap.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-19 16:20+0200\n"
-"PO-Revision-Date: 2012-08-29 13:59+0000\n"
-"Last-Translator: Stéphane BOCQUET <sbocquet4772@gmail.com>\n"
+"POT-Creation-Date: 2013-03-20 18:53+0100\n"
+"PO-Revision-Date: 2013-03-20 17:53+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,6 +47,11 @@ msgstr "LDAP"
 msgid "Password"
 msgstr "Mot de passe"
 
+msgid ""
+"Please check the <a href='http://linux.die.net/man/5/nss_ldap' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
+
 msgid "Root Bind DN"
 msgstr "DN racine de liaison (Root Bind DN)"
 
@@ -65,6 +70,9 @@ msgstr "Spécifie le DN avec lequel se lier au serveur d'annuaire pour les reche
 
 msgid "Specifies the group suffix, e.g. 'ou=Groups'."
 msgstr "Spécifie le suffixe de  groupe (ex: 'ou=Groups')."
+
+msgid "Specifies the port to connect to."
+msgstr ""
 
 msgid "Specifies the user suffix, e.g. 'ou=Users'."
 msgstr "Spécifie le suffixe d'utilisateur (ex: 'ou=Users')."
