--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/sv_SV/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/sv_SV/openmediavault-ldap.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-19 16:20+0200\n"
-"PO-Revision-Date: 2012-08-26 09:13+0000\n"
-"Last-Translator: Henrik Sandström <henrik.sandstroem@gmail.com>\n"
+"POT-Creation-Date: 2013-03-20 18:53+0100\n"
+"PO-Revision-Date: 2013-03-20 17:53+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Swedish (http://www.transifex.com/projects/p/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,6 +45,11 @@ msgstr "LDAP"
 msgid "Password"
 msgstr "Lösenord"
 
+msgid ""
+"Please check the <a href='http://linux.die.net/man/5/nss_ldap' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
+
 msgid "Root Bind DN"
 msgstr "Root Bind DN"
 
@@ -63,6 +68,9 @@ msgstr "Specificerar det distingerade namnet (DN) för att använda till katalog
 
 msgid "Specifies the group suffix, e.g. 'ou=Groups'."
 msgstr "Specificerar gruppsuffix, ex. 'ou=Groups'."
+
+msgid "Specifies the port to connect to."
+msgstr ""
 
 msgid "Specifies the user suffix, e.g. 'ou=Users'."
 msgstr "Specificerar användarsuffix, ex. 'ou=Users'. "
