--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,12 @@
+openmediavault (0.4.28) stable; urgency=low
+
+  * Update locales.
+  * Mantis 0000745: Autmatically save config.xml to config.bak.
+  * Mantis 0000746: Logical Volumes page does not show LVs that contain
+    dash in its name.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 26 Mar 2013 20:39:49 +0100
+
 openmediavault (0.4.27) stable; urgency=low
 
   * Update locales.
