--- a/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-14 02:55+0100\n"
-"PO-Revision-Date: 2013-03-14 01:56+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-03-21 10:54+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1433,7 +1433,7 @@ msgid ""
 msgstr "I nogle tilfælde skal du angive passive port områder for at by-passe firewall begrænsninger. Passive porte begrænser området af porte, som serveren vil vælge, når PASV kommandoen bliver sendt fra en klient. Serveren vil tilfældigt vælge et nummer indenfor for det angivne område, indtil en åben port er fundet. Det valgte port område skal være i det ikke-privilegeret område (f.eks større end eller lig med 1024). Det anbefales kraftigt, at det valgte område skal være stort nok til at håndtere mange samtidige passive forbindelser (eksempelvis, 49152-65534, det IANA-registrerede kortvarige port område)."
 
 msgid "Incorrect username or password."
-msgstr ""
+msgstr "Forkert brugernavn eller adgangskode."
 
 msgid "India"
 msgstr "India"
@@ -2920,7 +2920,7 @@ msgid "The changes have been applied successfully."
 msgstr "Ændringerne er blevet tilføjet med succes."
 
 msgid "The comment contains invalid characters"
-msgstr ""
+msgstr "Kommentaren indeholder ugyldige tegn"
 
 msgid "The default SMTP mail server port, e.g. 25 or 587."
 msgstr "Standard SMTP mail server port, f.eks 25 eller 587."
