--- a/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-14 02:55+0100\n"
-"PO-Revision-Date: 2013-03-14 01:56+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-03-25 12:20+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1437,7 +1437,7 @@ msgid ""
 msgstr ""
 
 msgid "Incorrect username or password."
-msgstr ""
+msgstr "Nieprawidłowa nazwa użytkownika lub hasło."
 
 msgid "India"
 msgstr "India"
@@ -2924,7 +2924,7 @@ msgid "The changes have been applied successfully."
 msgstr "Strefa czasu"
 
 msgid "The comment contains invalid characters"
-msgstr ""
+msgstr "Wprowadzono nieprawidłowe znaki"
 
 msgid "The default SMTP mail server port, e.g. 25 or 587."
 msgstr "Domyślne porty SMTP poczty serwera, np. 25 lub 587."
