--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-14 02:55+0100\n"
-"PO-Revision-Date: 2013-03-17 10:29+0000\n"
+"PO-Revision-Date: 2013-03-26 21:02+0000\n"
 "Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
@@ -2793,7 +2793,7 @@ msgid "Specifies which slave is the primary device."
 msgstr "Especifica qué esclaco es el dispositivo primario."
 
 msgid "Spindown time"
-msgstr "Tiempo de frenado"
+msgstr "Tiempo para detener el disco"
 
 msgid "Sri Lanka"
 msgstr "Sri Lanka"
