--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.4.29) stable; urgency=low
+
+  * Add missing vendor field in RPC RaidMgmt::getCandidates.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 21 Apr 2013 10:38:17 +0200
+
 openmediavault (0.4.28) stable; urgency=low
 
   * Update locales.
