--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -3,12 +3,12 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Alexander Savchenko <>, 2012.
-# Alexandr <phg.azlk@gmail.com>, 2012.
-#   <arturmon82@gmail.com>, 2012.
-#   <ffrants@gmail.com>, 2012.
-# Ichi  <ichiperm@gmail.com>, 2012.
-# артур Мудрых <arturmon82@gmail.com>, 2012-2013.
+# Alexander Savchenko <>, 2012
+# az lk <phg.azlk@gmail.com>, 2012
+# артур Мудрых <arturmon82@gmail.com>, 2012
+# mictian <ffrants@gmail.com>, 2012
+# Ichi <ichiperm@gmail.com>, 2012
+# артур Мудрых <arturmon82@gmail.com>, 2012-2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
