--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (0.4.29) stable; urgency=low
 
+  * Update locales.
   * Add missing vendor field in RPC RaidMgmt::getCandidates.
   * Mantis 0000760: Update does not update the current Samba recycle bin
     pruning scripts.
