--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -3,9 +3,9 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-#   <jmcainzos@vodafone.es>, 2012.
-# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2013.
-# Volker  <votdev@gmx.de>, 2012.
+# jmcainzos <jmcainzos@vodafone.es>, 2012
+# Raul Fernandez Garcia <raulfg3@gmail.com>, 2012-2013
+# Volker <votdev@gmx.de>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
