--- a/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
@@ -3,17 +3,17 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Christophe Lherieau <skimpax@gmail.com>, 2012-2013.
-# Nahir Mohamed <nahirmoha@gmail.com>, 2012-2013.
-# Stéphane BOCQUET <sbocquet4772@gmail.com>, 2012.
-# Stéphane BOCQUET <stephane_bocquet@hotmail.com>, 2012.
+# Christophe Lherieau <skimpax@gmail.com>, 2012-2013
+# Nahir Mohamed <nahirmoha@gmail.com>, 2012-2013
+# Stéphane BOCQUET <sbocquet4772@gmail.com>, 2012
+# Stéphane BOCQUET <stephane_bocquet@hotmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-14 02:55+0100\n"
-"PO-Revision-Date: 2013-03-14 01:56+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-04-21 08:47+0000\n"
+"Last-Translator: Christophe Lherieau <skimpax@gmail.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1436,7 +1436,7 @@ msgid ""
 msgstr "Dans certains cas, vous devez spécifier un plage de port passifs pour passer outre les limitations du pare-feu. Le serveur va choisir au hasard un nombre au sein de la plage spécifiée jusqu'à ce qu'un port ouvert soit trouvé. La plage de ports doit être choisi dans la plage Unix non-privilégiée (supérieur ou égal à 1024). Il est fortement recommandé que la plage choisie soit suffisamment grande pour traiter de nombreuses connexions simultanées passives (ex: 49152-65534, la plage de ports éphémères enregistrés à l'IANA)."
 
 msgid "Incorrect username or password."
-msgstr ""
+msgstr "Nom d'utilisateur ou mot de passe incorrect."
 
 msgid "India"
 msgstr "Inde"
@@ -2923,7 +2923,7 @@ msgid "The changes have been applied successfully."
 msgstr "Les modifications ont été appliquées avec succès."
 
 msgid "The comment contains invalid characters"
-msgstr ""
+msgstr "Le commentaire contient des caractères invalides"
 
 msgid "The default SMTP mail server port, e.g. 25 or 587."
 msgstr "Port par défaut du serveur de messagerie SMTP (ex: 25 ou 587)."
