--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -3,11 +3,11 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Mario Varelli <mvarelli@biologia.unipi.it>, 2012.
-#   <mauro.rulli@gmail.com>, 2012.
-# Mauro Rulli <mauro.rulli@gmail.com>, 2012.
-#   <mvarelli@biologia.unipi.it>, 2012.
-# Paolo Velati <paolo.velati@gmail.com>, 2013.
+# Mario Varelli <mvarelli@biologia.unipi.it>, 2012
+# Mauro Rulli <mauro.rulli@gmail.com>, 2012
+# Mauro Rulli <mauro.rulli@gmail.com>, 2012
+# Mario Varelli <mvarelli@biologia.unipi.it>, 2012
+# polxmod <paolo.velati@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
