--- a/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/nl_NL/openmediavault.po
@@ -3,9 +3,9 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Milan Toet <milantoet@gmail.com>, 2012.
-#   <seba.kerckhof@gmail.com>, 2012.
-#   <stoker.pc@home.nl>, 2012.
+# Milan Toet <milantoet@gmail.com>, 2012
+# Seba Kerckhof <seba.kerckhof@gmail.com>, 2012
+# stokerh <stoker.pc@home.nl>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
