--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/da_DA/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/da_DA/openmediavault-nut.po
@@ -17,7 +17,7 @@
 # You should have received a copy of the GNU General Public License
 # along with OpenMediaVault. If not, see <http://www.gnu.org/licenses/>.
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2012.
+# Stefan Thrane Overby <stoverby@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
