--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/es_ES/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/es_ES/openmediavault-nut.po
@@ -17,8 +17,8 @@
 # You should have received a copy of the GNU General Public License
 # along with OpenMediaVault. If not, see <http://www.gnu.org/licenses/>.
 # Translators:
-# Antonio Pelaez Redondo <antorayman@gmail.com>, 2012.
-#   <jmcainzos@vodafone.es>, 2012.
+# Antonio Pelaez Redondo <antorayman@gmail.com>, 2012
+# jmcainzos <jmcainzos@vodafone.es>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
