--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/ru_RU/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/ru_RU/openmediavault-nut.po
@@ -17,8 +17,8 @@
 # You should have received a copy of the GNU General Public License
 # along with OpenMediaVault. If not, see <http://www.gnu.org/licenses/>.
 # Translators:
-#   <arturmon82@gmail.com>, 2012.
-#   <ffrants@gmail.com>, 2012.
+# артур Мудрых <arturmon82@gmail.com>, 2012
+# mictian <ffrants@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
