--- a/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-14 02:55+0100\n"
-"PO-Revision-Date: 2013-03-25 12:20+0000\n"
+"PO-Revision-Date: 2013-05-21 08:44+0000\n"
 "Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
@@ -1165,12 +1165,12 @@ msgstr "Plik"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "Pliki w koszu zostaną automatycznie usunięte po określonej liczbie dni. Ustaw na 0 w przypadku ręcznego usunięcia."
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "Pliki, które są większe niż określona liczba bajtów nie zostanie przeniesiona do kosza. Ustaw na 0 dla nieograniczonego rozmiaru."
 
 msgid "Filesystem"
 msgstr "System plików"
@@ -1396,7 +1396,7 @@ msgid ""
 " before mapping DOS attributes to UNIX permission bits. When set, DOS "
 "attributes will be stored onto an extended attribute in the UNIX filesystem,"
 " associated with the file or directory."
-msgstr ""
+msgstr "Jeśli ten parametr jest ustawiony, Samba próbuje najpierw odczytać atrybuty DOS (SYSTEM, HIDDEN, ARCHIVE lub READ-ONLY) z atrybutów rozszerzonych plików, przed mapowaniem atrybutów DOS UNIX bitów uprawnień. Gdy zestaw, atrybuty DOS będzie przechowywane na rozszerzonych atrybutów w systemie plików UNIX, skojarzony plik lub katalog"
 
 msgid ""
 "If this parameter is set, then users may not create or modify files in the "
@@ -1408,7 +1408,7 @@ msgid ""
 "this option is useful in order to allow passive tranfers to work. You have "
 "to use your public address and opening the passive ports used on your "
 "firewall as well."
-msgstr ""
+msgstr "Jeśli host działa jako NAT bramy lub portu dla serwera, opcja ta jest użyteczna w celu umożliwienia pasywnego transferu do pracy. Będziesz musiał użyć adresu publicznego i otworzyć pasywne porty na zaporze."
 
 msgid "Implicit SSL"
 msgstr "Niejawny SSL"
@@ -1434,7 +1434,7 @@ msgid ""
 "greater than or equal to 1024). It is strongly recommended that the chosen "
 "range be large enough to handle many simultaneous passive connections (for "
 "example, 49152-65534, the IANA-registered ephemeral port range)."
-msgstr ""
+msgstr "W niektórych przypadkach trzeba określić zakres portów pasywny do obejścia zapory ograniczenia. Pasywnych portach ogranicza zakres portów, z których serwer wybierze gdy wysłane przez klienta polecenia PASV. Serwer będzie losowo wybrać numer z określonego zakresu, do czasu otworzenia portu. Zakres portów, zaznaczone musi być w zakresie nieuprzywilejowanego (np. większa niż lub równa 1024). Zaleca się, że wybrany zakres był wystarczająco duży, aby obsługiwać wiele jednoczesnych połączeń pasywne (na przykład 49152-65534, zakres portów tymczasowych IANA zarejestrowane)."
 
 msgid "Incorrect username or password."
 msgstr "Nieprawidłowa nazwa użytkownika lub hasło."
@@ -2984,7 +2984,7 @@ msgid ""
 " mask and directory mask but the inherit permissions parameter overrides "
 "this. This can be particularly useful on systems with many users to allow a "
 "single share to be used flexibly by each user."
-msgstr ""
+msgstr "Uprawnienia na nowe pliki i katalogi są zazwyczaj regulowane przez tworzenie maski i katalogu maski ale dziedziczyć uprawnienia parametr zastępuje to. Może to być szczególnie przydatne w systemach z wieloma użytkownikami pozwalając na jeden udział, by elastycznie użytkować przez każdego użytkownika."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
@@ -3117,7 +3117,7 @@ msgid ""
 "This may make more efficient use of the system CPU's and cause Samba to be "
 "faster. Samba automatically turns this off for clients that use protocol "
 "levels lower than NT LM 0.12 and when it detects a client is Windows 9x."
-msgstr ""
+msgstr "To może spowodować bardziej efektywnie wykorzystanie procesora systemu i przyspieszenie Samby. Samba automatycznie wyłącza dla klientów, które korzystają z protokołu poziomy niższe niż NT LM 0,12 i dla klienta Windows 9x."
 
 msgid ""
 "This option causes the server to not send a certificate request during a SSL"
@@ -3136,7 +3136,7 @@ msgid ""
 "use the keyword ALL (or the netmask 0.0.0.0/0) and then explicitly specify "
 "to the hosts allow parameter those hosts that should be permitted access. "
 "Leave this field empty to use default settings."
-msgstr ""
+msgstr "Ta opcja jest przecinek, spacja, lub tab zestaw hostów, które nie są dozwolone do tego modułu. W przypadku, gdy listy konfliktu, listy dozwolonych ma pierwszeństwo. W przypadku, gdy zachodzi potrzeba zaprzeczyć wszystko domyślnie, należy użyć słowa kluczowego ALL (lub 0.0.0.0/0 maskę) a następnie jawnie określić gospodarza umożliwiają parametr tych hostów, które powinny mieć dozwolony dostęp. Pozostaw to pole puste, aby korzystać z ustawień domyślnych."
 
 msgid ""
 "This option is a comma, space, or tab delimited set of host which are NOT "
@@ -3145,7 +3145,7 @@ msgid ""
 "use the keyword ALL (or the netmask 0.0.0.0/0) and then explicitly specify "
 "to the hosts allow parameter those hosts that should be permitted access. "
 "Leave this field empty to use default settings."
-msgstr ""
+msgstr "Ta opcja jest przecinek, spacja, lub TAB zestaw hostów, które nie są dozwolone, aby uzyskać dostęp do tego udziału. W przypadku, gdy listy konfliktu, listy dozwolonych ma pierwszeństwo. W przypadku, gdy zachodzi potrzeba zaprzeczyć wszystko domyślnie, należy użyć słowa kluczowego ALL (lub 0.0.0.0/0 maskę) a następnie jawnie określić gospodarze umożliwiają parametr tych hostów, które powinny mieć dozwolony dostęp. Pozostaw to pole puste, aby korzystać z ustawień domyślnych."
 
 msgid ""
 "This option is a comma, space, or tab delimited set of hosts which are "
