* Update locales. * Mantis 0000758: USB Backup plugins / delete option. * Add ability to backup a shared folder into a directory instead into the root of the USB device.

--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/de_DE/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/de_DE/openmediavault-usbbackup.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Volker <votdev@gmx.de>, 2013.
+# Volker <votdev@gmx.de>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
