--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/no_NO/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/no_NO/openmediavault-usbbackup.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-#  <runesudden@gmail.com>, 2013.
+# runesudden <runesudden@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
