--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,12 @@
+openmediavault-usbbackup (0.4.7) stable; urgency=low
+
+  * Update locales.
+  * Mantis 0000758: USB Backup plugins / delete option.
+  * Add ability to backup a shared folder into a directory instead into the
+    root of the USB device.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Jun 2013 10:05:52 +0200
+
 openmediavault-usbbackup (0.4.6) stable; urgency=low
 
   * Update locales.
