--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/el_GR/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/el_GR/openmediavault-usbbackup.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Kostas Moho <kgounaris@hotmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-12 13:08+0100\n"
-"PO-Revision-Date: 2013-03-12 12:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-04-26 11:52+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/projects/p/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,152 +19,152 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add USB backup job"
-msgstr ""
+msgstr "Προσθήκη εργασίας"
 
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr ""
+msgstr "Το αποτέλεσμα της εντολής (αφόσον υπάρχει) αποστέλεται στον διαχειριστή με μήνυμα."
 
 msgid "Archive"
-msgstr ""
+msgstr "Αρχειοθέτηση"
 
 msgid "Comment"
-msgstr ""
+msgstr "Σχολιασμός"
 
 msgid "Compress"
-msgstr ""
+msgstr "Συμπίεση"
 
 msgid "Compress file data during the transfer."
-msgstr ""
+msgstr "Συμπίεση δεδομένων κατά την μεταφορά"
 
 msgid "Delete"
-msgstr ""
+msgstr "Διαγραφή"
 
 msgid "Delete files on the receiving side that don't exist on sender."
-msgstr ""
+msgstr "Διαγραφή αρχείων του παραλήπτη που δεν διαθέτει ο αποστολέας."
 
 msgid "Device '%s' not found"
-msgstr ""
+msgstr "Η συσκευή '%s' δεν βρέθηκε"
 
 msgid "Edit USB backup job"
-msgstr ""
+msgstr "Μεταβολή εργασίας"
 
 msgid "Enable"
-msgstr ""
+msgstr "Ενεργοποίηση"
 
 msgid "Enable archive mode."
-msgstr ""
+msgstr "Ενεργοποίηση αρχειοθέτησης."
 
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Όταν είναι ενεργό, τα ημιτελή αρχεία διατηρούνται, αλλιώς διαγράφονται εφόσον έχει διακοπεί η μεταφορά τους."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Ενεργοποιημένο"
 
 msgid "Execute USB backup job"
-msgstr ""
+msgstr "Εκτέλεση εργασίας"
 
 msgid "External storage device"
-msgstr ""
+msgstr "Εξωτερική συσκευή αποθήκευσης"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Πρόσθετες επιλογές"
 
 msgid "Failed to get filesystems"
-msgstr ""
+msgstr "Αποτυχία λήψης συστημάτων αρχείων"
 
 msgid "Filesystem '%s' not found"
-msgstr ""
+msgstr "Το σύστημα αρχείων '%s' δεν βρέθηκε"
 
 msgid "From external storage to shared folder"
-msgstr ""
+msgstr "Από εξωτερική αποθήκευση προς κοινόχρηστο φάκελο"
 
 msgid "From shared folder to external storage"
-msgstr ""
+msgstr "Από κοινόχρηστο φάκελο προς εξωτερική αποθήκευση"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Διατήρηση ημιτελών αρχείων"
 
 msgid "Mode"
-msgstr ""
+msgstr "Κατάσταση"
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Περισσότερες λεπτομέρειες στο <a href='http://www.samba.org/ftp/rsync/rsync.html' target='_blank'>εγχειρίδιο</a>."
 
 msgid "Preserve ACLs"
-msgstr ""
+msgstr "Διατήρηση ACLs"
 
 msgid "Preserve extended attributes"
-msgstr ""
+msgstr "Διατήρηση εκτεταμένων ιδιοτήτων"
 
 msgid "Preserve modification times."
-msgstr ""
+msgstr "Διατήρηση χρόνου μεταβολών."
 
 msgid "Preserve permissions"
-msgstr ""
+msgstr "Διατήρηση δικαιωμάτων"
 
 msgid "Quiet"
-msgstr ""
+msgstr "Αθόρυβα"
 
 msgid "Recurse into directories."
-msgstr ""
+msgstr "Να περιληφθούν και οι υποφάκελοι."
 
 msgid "Recursive"
-msgstr ""
+msgstr "Αναδρομικά"
 
 msgid "Run"
-msgstr ""
+msgstr "Εκκίνηση"
 
 msgid "Running"
-msgstr ""
+msgstr "Εκτελείται"
 
 msgid "Select a volume ..."
-msgstr ""
+msgstr "Επιλογή τόμου..."
 
 msgid "Send command output via email."
-msgstr ""
+msgstr "Αποστολή του αποτελέσματος με μήνυμα."
 
 msgid "Send email"
-msgstr ""
+msgstr "Αποστολή μηνύματος"
 
 msgid ""
 "Set the destination permissions to be the same as the source permissions."
-msgstr ""
+msgstr "Να τεθούν τα δικαιώματα στον προορισμό όπως είναι στην πηγή."
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Κοινόχρηστος φάκελος"
 
 msgid "Suppress non-error messages."
-msgstr ""
+msgstr "Παράλειψη μηνυμάτων που δεν αφορούν σφάλματα."
 
 msgid "The external storage device."
-msgstr ""
+msgstr "Η εξωτερική συσκευή αποθήκευσης."
 
 msgid ""
 "The shared folder to synchronise when the external storage device is "
 "connected."
-msgstr ""
+msgstr "Ο κοινόχρηστος φάκελος για συγχρονισμό όταν συνδέεται η εξωτερική συσκευή αποθήκευσης."
 
 msgid "Times"
-msgstr ""
+msgstr "Χρόνοι"
 
 msgid "USB Backup"
-msgstr ""
+msgstr "Αντίγραφα ασφαλείας σε USB"
 
 msgid "Update the destination ACLs to be the same as the source ACLs."
-msgstr ""
+msgstr "Ενημέρωση των ACL του προορισμού όπως είναι τα ACL της πηγής."
 
 msgid ""
 "Update the destination extended attributes to be the same as the local ones."
-msgstr ""
+msgstr "Ενημέρωση των απομακρυσμένων εκτεταμένων ιδιοτήτων όπως τα τοπικά."
 
 msgid "Volume"
-msgstr ""
+msgstr "Τόμος"
 
 msgid "n/a"
-msgstr ""
+msgstr "n/a"
