--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/fr_FR/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/fr_FR/openmediavault-usbbackup.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Nahir Mohamed <nahirmoha@gmail.com>, 2013.
+# Christophe Lherieau <skimpax@gmail.com>, 2013
+# Nahir Mohamed <nahirmoha@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-12 13:08+0100\n"
-"PO-Revision-Date: 2013-03-12 12:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-04-21 17:21+0000\n"
+"Last-Translator: Christophe Lherieau <skimpax@gmail.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,16 +81,16 @@ msgid "Filesystem '%s' not found"
 msgstr "Système de fichier '%s' non trouvé"
 
 msgid "From external storage to shared folder"
-msgstr ""
+msgstr "Du stockage externe vers le dossier partagé"
 
 msgid "From shared folder to external storage"
-msgstr ""
+msgstr "Du dossier partagé vers le stockage externe"
 
 msgid "Keep partially transferred files"
 msgstr "Converse les fichiers partiellement transferés"
 
 msgid "Mode"
-msgstr ""
+msgstr "Mode"
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
@@ -121,7 +122,7 @@ msgid "Run"
 msgstr "Lancer"
 
 msgid "Running"
-msgstr ""
+msgstr "En cours d'exécution"
 
 msgid "Select a volume ..."
 msgstr "Selectionner un volume"
