--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/it_IT/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/it_IT/openmediavault-usbbackup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Paolo Velati <paolo.velati@gmail.com>, 2013.
+# polxmod <paolo.velati@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-12 13:08+0100\n"
-"PO-Revision-Date: 2013-03-12 12:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-03-12 13:26+0000\n"
+"Last-Translator: polxmod <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,16 +80,16 @@ msgid "Filesystem '%s' not found"
 msgstr "Filesystem '%s' non trovato"
 
 msgid "From external storage to shared folder"
-msgstr ""
+msgstr "Da dispositivo esterno a cartella condivisa"
 
 msgid "From shared folder to external storage"
-msgstr ""
+msgstr "Da cartella condivisa a dispositivo esterno"
 
 msgid "Keep partially transferred files"
 msgstr "Mantieni i file parzialmente trasferiti"
 
 msgid "Mode"
-msgstr ""
+msgstr "Modalità"
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
@@ -121,7 +121,7 @@ msgid "Run"
 msgstr "Esegui adesso"
 
 msgid "Running"
-msgstr ""
+msgstr "In esecuzione"
 
 msgid "Select a volume ..."
 msgstr "Seleziona un volume ..."
