--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/pl_PL/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/pl_PL/openmediavault-usbbackup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2013.
+# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-12 13:08+0100\n"
-"PO-Revision-Date: 2013-03-12 12:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-03-25 12:16+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,16 +80,16 @@ msgid "Filesystem '%s' not found"
 msgstr "System plików '%s' nie znaleziony"
 
 msgid "From external storage to shared folder"
-msgstr ""
+msgstr "Z zewnętrznej pamięci masowej do udostępnionego folderu"
 
 msgid "From shared folder to external storage"
-msgstr ""
+msgstr "Z folderu udostępnionego do zewnętrznej pamięci masowej"
 
 msgid "Keep partially transferred files"
 msgstr "Zachowaj częściowo przesłane pliki"
 
 msgid "Mode"
-msgstr ""
+msgstr "Opcja"
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
@@ -121,7 +121,7 @@ msgid "Run"
 msgstr "Uruchom"
 
 msgid "Running"
-msgstr ""
+msgstr "Uruchomiony"
 
 msgid "Select a volume ..."
 msgstr "Wybierz wolumen ..."
