--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-08 20:23+0100\n"
-"PO-Revision-Date: 2014-03-13 09:57+0000\n"
+"PO-Revision-Date: 2014-03-14 14:02+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/projects/p/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -26,13 +26,13 @@ msgid "%s (%s available)"
 msgstr "%s (%s elérhető)"
 
 msgid "%s [on %s, %s ]"
-msgstr ""
+msgstr "%s [a %s, %s ]"
 
 msgid "'All' is not allowed"
 msgstr "'Összes' nem megengedett"
 
 msgid "0 KiB/s means unlimited."
-msgstr "0 KiB/s korlátlan."
+msgstr "0 KB/s korlátlan."
 
 msgid "1 - Minimum power usage with standby (spindown)"
 msgstr "1 - Minimális energia használat készenléti állapotban (leállítás)"
@@ -155,7 +155,7 @@ msgid "9 months"
 msgstr "9 hónap"
 
 msgid "A share with the name '%s' already exists"
-msgstr ""
+msgstr "Egy megosztás '%s' néven már létezik"
 
 msgid "A shared folder with the given name already exists"
 msgstr "Egy megosztott mappa már létezik a megadott névvel"
@@ -170,7 +170,7 @@ msgid "About"
 msgstr "Névjegy"
 
 msgid "Access Right Management"
-msgstr "Hozzáférési Jogok Kezelése"
+msgstr "Hozzáférési jogok kezelése"
 
 msgid "Access Rights Management"
 msgstr "Hozzáférési jog kezelés"
@@ -257,7 +257,7 @@ msgid "Administrator: read/write, Users: read/write, Others: read-only"
 msgstr "Adminisztrátor: olvasás/írás, Felhasználó: olvasás/írás, Mások: csak olvasás"
 
 msgid "Advanced Power Management"
-msgstr "Fejlett Energia Gazdálkodás"
+msgstr "Fejlett energiagazdálkodás"
 
 msgid "Advanced settings"
 msgstr "Haladó beállítások"
@@ -372,7 +372,7 @@ msgid "Aruba"
 msgstr "Aruba"
 
 msgid "Asynchronous I/O"
-msgstr ""
+msgstr "Aszinkron I/O"
 
 msgid "Attribute name"
 msgstr "Attribútum név"
@@ -465,10 +465,10 @@ msgid "Bhutan"
 msgstr "Bhutan"
 
 msgid "Binary"
-msgstr ""
+msgstr "Bináris"
 
 msgid "Block layer cache [%s, %s]"
-msgstr ""
+msgstr "Réteg cache blokkolás [%s, %s]"
 
 msgid "Blocksize"
 msgstr "Blokkméret"
@@ -480,7 +480,7 @@ msgid "Bond options"
 msgstr "Kötési opciók"
 
 msgid "Boot"
-msgstr ""
+msgstr "Boot"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnia - Hercegovina"
@@ -620,13 +620,13 @@ msgid "Comment"
 msgstr "Megjegyzés"
 
 msgid "Common Name"
-msgstr "Általános Név"
+msgstr "Általános név"
 
 msgid "Community"
 msgstr "Közösség"
 
 msgid "Community-maintained updates."
-msgstr ""
+msgstr "Közösség számára fenntartott frissítések."
 
 msgid "Comoros"
 msgstr "Comoros"
@@ -635,7 +635,7 @@ msgid "Complete"
 msgstr "Kész"
 
 msgid "Completion status"
-msgstr ""
+msgstr "Elkészülés állapota"
 
 msgid "Compress"
 msgstr "Tömörítés"
@@ -733,7 +733,7 @@ msgid "DHCP"
 msgstr "DHCP"
 
 msgid "DNS Server"
-msgstr "DNS Szerver"
+msgstr "DNS szerver"
 
 msgid "DNS server"
 msgstr "DNS szerver"
@@ -745,7 +745,7 @@ msgid "Date"
 msgstr "Dátum"
 
 msgid "Date & Time"
-msgstr "Dátum & Idő"
+msgstr "Dátum és idő"
 
 msgid "Day of month"
 msgstr "Hónap napján"
@@ -816,7 +816,7 @@ msgid "Device"
 msgstr "Meghajtó"
 
 msgid "Device Mapper %s [%s, %s]"
-msgstr ""
+msgstr "Eszköz mappaló %s [%s, %s]"
 
 msgid "Device information"
 msgstr "Eszközinformáció"
@@ -858,7 +858,7 @@ msgid "Djibouti"
 msgstr "Djibouti"
 
 msgid "Do you really want to apply the configuration?"
-msgstr ""
+msgstr "Valóban alkalmazni szeretnéd a konfigurációt?"
 
 msgid "Do you really want to clear the log file?"
 msgstr "Valóban törölni szeretnéd a napló fájlt?"
@@ -892,7 +892,7 @@ msgstr "Valóban újra szeretnéd indítani a rendszert?"
 msgid ""
 "Do you really want to remove the shared folder content? It will be "
 "permanently removed and cannot be recovered."
-msgstr ""
+msgstr "Valóban el szeretnéd távolítani a megosztott mappa tartalmát? Véglegesen eltávolításra kerül és nem állítható vissza."
 
 msgid "Do you really want to reset WebGUI state, e.g. grid column order?"
 msgstr "Valóban vissza szeretnéd állítani a WebGUI állapotot, mint például rács oszlop sorrend?"
@@ -919,7 +919,7 @@ msgid ""
 msgstr "El szeretnéd távolítani a rekurzívan megosztott mappa tartalmát? A megosztott mappa tartalma véglegesen el lesz távolítva és nem lehet azt visszaállítani. Válaszd a 'Nem'-et, ha csak a megosztott mappa konfigurációját akarod törölni vagy a 'Mégsem'-et a megszakításhoz."
 
 msgid "Domain name"
-msgstr "Domain név"
+msgstr "Tartománynév"
 
 msgid "Dominica"
 msgstr "Dominica"
@@ -1041,7 +1041,7 @@ msgid "Enable archive mode"
 msgstr "Archiváló mód engedélyezése"
 
 msgid "Enable asynchronous I/O (AIO) support."
-msgstr ""
+msgstr "Aszinkron I/O (AIO) támogatás engedélyezése."
 
 msgid "Enable chroot."
 msgstr "Chroot engedélyezése."
@@ -1085,7 +1085,7 @@ msgstr "Az ident protokoll engedélyezése (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Engedélyezd eszt az opciót, hogy megtartsa a részben átküldött fájlokat, ellenkező esetben törlésre kerülnek, ha az átvitel megszakad"
 
 msgid "Enable transfer log"
 msgstr "Átviteli napló engedélyezése"
@@ -1172,7 +1172,7 @@ msgid "FTP"
 msgstr "FTP"
 
 msgid "FTP - Transfer log"
-msgstr "FTP - Átviteli napló"
+msgstr "FTP - átviteli napló"
 
 msgid "FXP"
 msgstr "FXP"
@@ -1186,19 +1186,19 @@ msgid "Failed to get filesystems"
 msgstr "Nem sikerült lekérni a fájlrendszereket"
 
 msgid "Failed to get list of groups."
-msgstr ""
+msgstr "A csoportok listájának lekérése sikertelen."
 
 msgid "Failed to get list of network interface devices"
-msgstr ""
+msgstr "Hálózati eszközök listájának lekérdezése sikertelen."
 
 msgid "Failed to get list of users."
-msgstr ""
+msgstr "A felhasználók listájának lekérése sikertelen."
 
 msgid "Failed to get shadow password suite configuration."
-msgstr ""
+msgstr "Nem sikerült megszerezni az árnyékjelszó konfigurációját."
 
 msgid "Failed to get storage device file from '%s'"
-msgstr ""
+msgstr "Nem sikerült tárolóeszköznek fájlokat ´%s´-től szerezni"
 
 msgid "Falkland Islands"
 msgstr "Falkland Islands"
@@ -1236,12 +1236,12 @@ msgstr "Fájlnév"
 msgid ""
 "Files in the recycle bin will be deleted automatically after the specified "
 "number of days. Set to 0 for manual deletion."
-msgstr ""
+msgstr "A fájlok a megadott számú nap után automatikusan törlődnek a lomtárból. Állítsd 0-ra a kézi törléshez."
 
 msgid ""
 "Files that are larger than the specified number of bytes will not be put "
 "into the recycle bin. Set to 0 for unrestricted file size."
-msgstr ""
+msgstr "A megadott méretnél nagyobb fájlok nem helyezhetőek a lomtárba. Állítsd 0-ra a korlátlan fájlmérethez."
 
 msgid "Filesize"
 msgstr "Fájlméret"
@@ -1286,7 +1286,7 @@ msgid "French Southern Territories"
 msgstr "French Southern Territories"
 
 msgid "French Southern and Antarctic Territories"
-msgstr "French Southern and Antarctic Territories"
+msgstr "French Southern és Antarctic Territories"
 
 msgid "Friday"
 msgstr "Péntek"
@@ -1307,7 +1307,7 @@ msgid "General"
 msgstr "Általános"
 
 msgid "General Settings"
-msgstr "Általános Beállítások"
+msgstr "Általános beállítások"
 
 msgid "General settings"
 msgstr "Általános beállítások"
@@ -1469,7 +1469,7 @@ msgid ""
 "before starting the file transfer with the client. Then it is not possible "
 "to map users and groups by name and the daemon is not being able to follow "
 "symbolic links that are either absolute or outside of the new root path."
-msgstr ""
+msgstr "Ha ez az opció be van állítva a démon chroot-olni fog a megosztott mappa útvonalához mielőtt megkezdené az átvitelt a felhasználó felé. Ezután nem lehetséges felhasználókat és csoportokat név után leképezni és a démon sem képes szimbolikus kapcsolatokat követni amik vagy teljesek, vagy a gyökérútvonalakon kívül vannak."
 
 msgid "If this option is set, then any attempted downloads will fail."
 msgstr "Ha ez az opció aktív, akkor minden letöltési kísérlet hibás lesz."
@@ -1581,7 +1581,7 @@ msgid "Interfaces"
 msgstr "Interfészek"
 
 msgid "Invalid domain name"
-msgstr "Érvénytelen domain név"
+msgstr "Érvénytelen tartománynév"
 
 msgid "Invalid file system label"
 msgstr "Érvénytelen fájlrendszer címke"
@@ -1647,7 +1647,7 @@ msgid "Kazakhstan"
 msgstr "Kazakhstan"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Részben átküldött fájlok megtartása"
 
 msgid "Kenya"
 msgstr "Kenya"
@@ -1659,7 +1659,7 @@ msgid "Key size"
 msgstr "Kulcs méret"
 
 msgid "KiB"
-msgstr "KiB"
+msgstr "KB"
 
 msgid "Kiribati"
 msgstr "Kiribati"
@@ -1760,7 +1760,7 @@ msgid "Long self-test"
 msgstr "Hosszú önteszt"
 
 msgid "Loop device [%s, %s]"
-msgstr ""
+msgstr "Hurokeszköz [%s, %s]"
 
 msgid "Luxembourg"
 msgstr "Luxembourg"
@@ -1769,7 +1769,7 @@ msgid "MAC address"
 msgstr "MAC cím"
 
 msgid "MII monitoring frequency"
-msgstr "MII ellenőrzési gyakorisága"
+msgstr "MII ellenőrzési gyakoriság"
 
 msgid "MTU"
 msgstr "MTU"
@@ -1845,7 +1845,7 @@ msgid "Max. login attempts"
 msgstr "Max. bejelentkezési kísérletek"
 
 msgid "Maximum download rate (KiB/s)"
-msgstr "Maximum letöltési sebesség (KiB/s)"
+msgstr "Maximum letöltési sebesség (KB/s)"
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
@@ -1866,7 +1866,7 @@ msgid "Maximum performance, maximum acoustic output"
 msgstr "Maximális teljesítmény, Maximális zajszint"
 
 msgid "Maximum upload rate (KiB/s)"
-msgstr "Maximum feltöltési sebesség (KiB/s)"
+msgstr "Maximum feltöltési sebesség (KB/s)"
 
 msgid "Maximum {0} selected item(s) allowed"
 msgstr "Maximum {0} kiválasztott tétel engedélyezett"
@@ -1881,7 +1881,7 @@ msgid "Members"
 msgstr "Tagok"
 
 msgid "Memory usage"
-msgstr "Memória használat"
+msgstr "Memóriahasználat"
 
 msgid "Message"
 msgstr "Üzenet"
@@ -1899,7 +1899,7 @@ msgid "Mexico"
 msgstr "Mexico"
 
 msgid "MiB"
-msgstr "MiB"
+msgstr "MB"
 
 msgid "Micronesia"
 msgstr "Micronesia"
@@ -2010,7 +2010,7 @@ msgid "Network interface '%s' already exists"
 msgstr "'%s' hálózati interfész már létezik"
 
 msgid "Neutral Zone"
-msgstr "Semleges Övezet"
+msgstr "Semleges övezet"
 
 msgid "Never"
 msgstr "Soha"
@@ -2133,7 +2133,7 @@ msgid "Online"
 msgstr "Online"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "A művelet nem engedélyezett a felhasználó számára '%s'."
 
 msgid "Options"
 msgstr "Opciók"
@@ -2142,7 +2142,7 @@ msgid "Organization Name"
 msgstr "Szervezet Név"
 
 msgid "Organizational Unit"
-msgstr "Szervezeti Egység"
+msgstr "Szervezeti egység"
 
 msgid "Others"
 msgstr "Mások"
@@ -2214,7 +2214,7 @@ msgid "People's Democratic Republic of Yemen"
 msgstr "People's Democratic Republic of Yemen"
 
 msgid "Perform a trial run with no changes made"
-msgstr ""
+msgstr "Kipróbálás változások nélkül"
 
 msgid "Period of validity"
 msgstr "Érvényesség ideje"
@@ -2244,7 +2244,7 @@ msgid "Philippines"
 msgstr "Philippines"
 
 msgid "Physical Disks"
-msgstr "Fizikai Lemezek"
+msgstr "Fizikai lemezek"
 
 msgid "Physical disk properties"
 msgstr "Fizikai lemez tulajdonságok"
@@ -2291,7 +2291,7 @@ msgid ""
 msgstr "Kérlek tekintsd meg a <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>kézikönyvet</a> a további részletekért."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
-msgstr ""
+msgstr "Válaszd ki a módszert az eszköz törlésére, vagy a 'Mégsem'-et a megszakításhoz."
 
 msgid "Please first select a volume."
 msgstr "Kérlek előbb válassz ki egy kötetet."
@@ -2310,7 +2310,7 @@ msgstr "Kérlek várj ..."
 msgid ""
 "Please wait until the RAID has been initialized before creating a file "
 "system."
-msgstr ""
+msgstr "Kérlek várj a RAID inicializására a fájlrendszer létrehozása előtt."
 
 msgid "Plugins"
 msgstr "Bővítmények"
@@ -2328,7 +2328,7 @@ msgid "Portugal"
 msgstr "Portugal"
 
 msgid "Power Management"
-msgstr "Energia Gazdálkodás"
+msgstr "Energiagazdálkodás"
 
 msgid "Power button"
 msgstr "Bekapcsoló gomb"
@@ -2337,7 +2337,7 @@ msgid "Power mode"
 msgstr "Energia mód"
 
 msgid "Pre-released updates."
-msgstr "Előre kiadott frissítések."
+msgstr "Kiadás előtt álló frissítések."
 
 msgid "Prefix length"
 msgstr "Előtag hossza"
@@ -2437,7 +2437,7 @@ msgid "RAID 6"
 msgstr "RAID 6"
 
 msgid "RAID Management"
-msgstr "RAID Kezelés"
+msgstr "RAID kezelés"
 
 msgid "RFC931"
 msgstr "RFC931"
@@ -2557,10 +2557,10 @@ msgid "Rsync"
 msgstr "Rsync"
 
 msgid "Rsync - Jobs"
-msgstr "Rsync - Feladatok"
+msgstr "Rsync - feladatok"
 
 msgid "Rsync - Server"
-msgstr "Rsync - Szerver"
+msgstr "Rsync - szerver"
 
 msgid "Run"
 msgstr "Futtatás"
@@ -2668,7 +2668,7 @@ msgid "Seconds"
 msgstr "Másodperc"
 
 msgid "Secure"
-msgstr ""
+msgstr "Biztonságos"
 
 msgid "Secure connection"
 msgstr "Biztonságos kapcsolat"
@@ -2804,7 +2804,7 @@ msgid "Seychelles"
 msgstr "Seychelles"
 
 msgid "Shared Folders"
-msgstr "Megosztott Mappák"
+msgstr "Megosztott mappák"
 
 msgid "Shared folder"
 msgstr "Megosztott mappa"
@@ -2909,7 +2909,7 @@ msgid "Spain"
 msgstr "Spain"
 
 msgid "Special action flag"
-msgstr ""
+msgstr "Különleges jelzés"
 
 msgid "Specifies how many server threads to create."
 msgstr "Meghatározza, hogy hány szerver szálat lehet létrehozni."
@@ -2979,7 +2979,7 @@ msgid "State"
 msgstr "Állapot"
 
 msgid "State/Province"
-msgstr "Állapot/Tartomány"
+msgstr "Állam/Tartomány"
 
 msgid "Static"
 msgstr "Statikus"
@@ -3039,19 +3039,19 @@ msgid "System"
 msgstr "Rendszer"
 
 msgid "System Information"
-msgstr "Rendszer Információ"
+msgstr "Rendszer-információ"
 
 msgid "System Logs"
-msgstr "Rendszer Naplók"
+msgstr "Rendszernaplók"
 
 msgid "System time"
-msgstr "Rendszer idő"
+msgstr "Rendszeridő"
 
 msgid "TAR"
 msgstr "TAR"
 
 msgid "TCP forwarding"
-msgstr "TCP átengedés"
+msgstr "TCP továbbítás"
 
 msgid "TFTP"
 msgstr "TFTP"
@@ -3129,7 +3129,7 @@ msgid ""
 msgstr "Az elérhető szoftverrel kapcsolatos információ elavult. Töltsd be újra az elérhető szoftverek információit."
 
 msgid "The interface '%s' is already used by a bonding interface"
-msgstr ""
+msgstr "Az interfész '%s' már használatban van egy összekötött interfész által"
 
 msgid "The location of the files to share."
 msgstr "A megosztás fájljainak helye."
@@ -3153,7 +3153,7 @@ msgstr "Az oldal most újratöltődik a változások érvénybe lépéséhez."
 
 #, php-format
 msgid "The parameter '%s' contains forbidden two-dot symbols"
-msgstr ""
+msgstr "A paraméter '%s' tiltott két-pont szimbólumot tartalmaz."
 
 msgid "The password contains invalid characters"
 msgstr "A jelszó érvénytelen karaktereket tartalmaz"
@@ -3178,7 +3178,7 @@ msgstr "A jogosultságok új fájlokon és könyvtárakon általában szabályoz
 msgid ""
 "The repository will be checked for new, removed or upgraded software "
 "packages."
-msgstr ""
+msgstr "A tároló ellenőrizve lesz az új, eltávolított vagy frissített szoftverekért."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
@@ -3187,7 +3187,7 @@ msgstr "Annak a követelménye, hogy az SSL munkamenettől a vezérlő kapcsolat
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "A munkamenet lejárta percben. A 0 érték beállítása letiltja az automatikus kijelentkezést."
 
 msgid "The shared folder is already used by another share."
 msgstr "A megosztott mappa már használva van egy másik megosztásban."
@@ -3201,7 +3201,7 @@ msgid "The source shared folder."
 msgstr "Megosztott mappa forrása."
 
 msgid "The specified quota exceeds the max. possible value of 4TiB."
-msgstr "A megadott kvóta meghaladja a max. lehetséges 4TiB értéket."
+msgstr "A megadott kvóta meghaladja a max. lehetséges 4TB értéket."
 
 msgid "The system will reboot now. This may take some time ..."
 msgstr "A rendszer most újraindul. Ez eltarthat egy ideig ..."
@@ -3273,10 +3273,10 @@ msgid "This field should be a hostname or an IPv4 address"
 msgstr "Ennek a mezőnek hosztnévnek vagy egy IPv4 címnek kell lennie"
 
 msgid "This field should be a list of domainnames or IP addresses"
-msgstr ""
+msgstr "Ennek a mezőnek egy tartománynév listának vagy egy IP címnek kell lennie"
 
 msgid "This field should be a list of hostnames or IP addresses"
-msgstr ""
+msgstr "Ennek a mezőnek hosztnév listának vagy egy IP címnek kell lennie"
 
 msgid ""
 "This field should be a netmask within the range 128.0.0.0 - 255.255.255.252"
@@ -3428,7 +3428,7 @@ msgid "Thursday"
 msgstr "Csütörtök"
 
 msgid "TiB"
-msgstr "TiB"
+msgstr "TB"
 
 msgid "Time"
 msgstr "Idő"
@@ -3479,7 +3479,7 @@ msgid "Trial run"
 msgstr "Próbaüzem"
 
 msgid "Trinidad and Tobago"
-msgstr "Trinidad and Tobago"
+msgstr "Trinidad és Tobago"
 
 msgid "Tuesday"
 msgstr "Kedd"
@@ -3494,7 +3494,7 @@ msgid "Turkmenistan"
 msgstr "Turkmenistan"
 
 msgid "Turks and Caicos Islands"
-msgstr "Turks and Caicos Islands"
+msgstr "Turks és Caicos Islands"
 
 msgid "Tuvalu"
 msgstr "Tuvalu"
@@ -3563,7 +3563,7 @@ msgid "Up delay"
 msgstr "Engedélyezés késleltetése"
 
 msgid "Update Manager"
-msgstr "Frissítés Kezelő"
+msgstr "Frissítéskezelő"
 
 msgid "Update now"
 msgstr "Frissítés most"
@@ -3612,7 +3612,7 @@ msgid "Use SSL/TLS secure connection"
 msgstr "SSL/TLS biztonságos kapcsolat használata"
 
 msgid "Use chroot"
-msgstr ""
+msgstr "Chroot használata"
 
 msgid "Use sendfile"
 msgstr "Sendfile használata"
@@ -3710,16 +3710,16 @@ msgid "Wake-on-LAN"
 msgstr "Ébresztés LAN-on keresztül "
 
 msgid "Wallis and Futuna"
-msgstr "Wallis and Futuna"
+msgstr "Wallis és Futuna"
 
 msgid "Warning"
 msgstr "Figyelmeztetés"
 
 msgid "Web Administration"
-msgstr "Web Adminisztráció"
+msgstr "Web adminisztráció"
 
 msgid "Web Administrator Password"
-msgstr "Web Adminisztrátor Jelszó"
+msgstr "Web adminisztrátor jelszó"
 
 msgid "Web administration"
 msgstr "Web adminisztráció"
