--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-08 20:23+0100\n"
-"PO-Revision-Date: 2014-03-14 14:02+0000\n"
+"PO-Revision-Date: 2014-04-20 05:01+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/projects/p/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -534,7 +534,7 @@ msgid "Canada"
 msgstr "Canada"
 
 msgid "Cancel"
-msgstr "Mégse"
+msgstr "Mégsem"
 
 msgid ""
 "Cannot unlink shared folder content because another shared folder is "
@@ -858,7 +858,7 @@ msgid "Djibouti"
 msgstr "Djibouti"
 
 msgid "Do you really want to apply the configuration?"
-msgstr "Valóban alkalmazni szeretnéd a konfigurációt?"
+msgstr "Valóban alkalmazni szeretnéd a változásokat?"
 
 msgid "Do you really want to clear the log file?"
 msgstr "Valóban törölni szeretnéd a napló fájlt?"
@@ -875,7 +875,7 @@ msgstr "Valóban törölni szeretnéd a kiválasztott tétel(eke)t?"
 msgid ""
 "Do you really want to format this device? All data on it will be deleted. "
 "Please note that the file system creation may take some time."
-msgstr "Valóban szeretnéd formázni az eszközt? Az összes adat törlésre kerül. Kérlek vedd figyelembe, hogy a fájlrendszer létrehozása eltarthat egy ideig."
+msgstr "Valóban formázni szeretnéd az eszközt? Az összes adat törlésre kerül. Kérlek vedd figyelembe, hogy a fájlrendszer létrehozása eltarthat egy ideig."
 
 msgid "Do you really want to install the selected plugin(s)?"
 msgstr "Valóban telepíteni szeretnéd a kiválasztott bővítmény(eke)t?"
@@ -2291,7 +2291,7 @@ msgid ""
 msgstr "Kérlek tekintsd meg a <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>kézikönyvet</a> a további részletekért."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
-msgstr "Válaszd ki a módszert az eszköz törlésére, vagy a 'Mégsem'-et a megszakításhoz."
+msgstr "Válaszd ki a módszert az eszköz formázásához, vagy a 'Mégsem'-et a megszakításhoz."
 
 msgid "Please first select a volume."
 msgstr "Kérlek előbb válassz ki egy kötetet."
@@ -3095,7 +3095,7 @@ msgstr "A megjegyzés érvénytelen karaktereket tartalmaz"
 msgid ""
 "The configuration has been changed. You must apply the changes in order for "
 "them to take effect."
-msgstr "A konfiguráció megváltozott. Alkalmazd a változásokat, hogy érvénybe lépjenek."
+msgstr "A konfiguráció megváltozott! Alkalmazd a változásokat, hogy érvénybe léphessenek."
 
 msgid "The default SMTP mail server port, e.g. 25 or 587."
 msgstr "Az alapértelmezett SMTP levél szerver portja, pl. 25 vagy 587."
