--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (0.5.46) stable; urgency=low
 
+  * Update locales.
   * Various code improvements.
   * Display the 'Information | About' page after user login.
   * Improve 'openmediavault' PAM configuration.
